Adicionando novas modificações

--- a/site/pages/reports.html
+++ b/site/pages/reports.html
@@ -3,10 +3,9 @@
         <div class="col1">
             <h1>Balanço Geral</h1>
             <ul>
-                <li>Você obteve uma taxa total de crescimento de <b>35%</b> em comparação ao mês anterior.</li>
-                <li>O valor mais alto registrado foi de <b>R$ 29.000,00</b> em outubro, enquanto o menor foi <b>R$
-                        10.125,90</b> em março.</li>
-                <li>Sua média de receita mensal é de R$ <b>20.000,00</b>.</li>
+                <li>Você obteve uma taxa total de variação de <b><span id="percentualGeral"></span></b> em comparação ao mês anterior.</li>
+                <li>O valor mais alto registrado foi de <b><span id="valorMaximo"></span></b> em <span id="mesMaximo"></span>, enquanto o menor foi <b><span id="valorMinimo"></span></b> em <span id="mesMinimo"></span>.</li>
+                <li>Sua média mensal é de R$ <b><span id="valorMedio"></span></b>.</li>
             </ul>
         </div>
         <div class="col2">
@@ -95,7 +94,7 @@
             <canvas id="barraOrc"></canvas>
         </div>
     </div>
-    <div class="container-histograma row">
+    <!-- <div class="container-histograma row">
         <div class="grafico4">
             <canvas id="histograma"></canvas>
         </div>
@@ -112,7 +111,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
 
 <link rel="stylesheet" href="../assets/css/reports.css">
