--- a/site/index.html
+++ b/site/index.html
@@ -1,82 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/login.css">
+    <title>Tela Principal</title>
+    <link rel="icon" href="/assets/img/logo.png" type="image/png">
+    <link rel="stylesheet" href="../assets/css/dashboard.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@latest/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+    <script src="assets/js/charts.js" defer></script>
+    <script src="assets/js/overview.js" defer></script>
+    <script src="assets/js/cashflow.js" defer></script>
+    <script src="assets/js/budgets.js" defer></script>
+    <script src="assets/js/goals.js" defer></script>
+    <script src="assets/js/reports.js" defer></script>
+    <script src="assets/js/util.js" defer></script>
 </head>
-
 <body>
-    <main class="d-flex align-items-center min-vh-100 py-3 py-md-0">
-        <div class="container">
-            <div class="card login-card">
-                <div class="row no-gutters">
-                    <div class="col-md-5">
-                        <img src="assets/img/woman.svg" alt="login" class="login-card-img">
-                        <p>O controle das suas finanças começa aqui.</p>
-                    </div>
-                    <div class="col-md-7">
-                        <div class="card-body">
-                            <div class="brand-wrapper">
-                                <img src="/assets/img/aaaaa.svg" alt="logo" class="logo">
-                            </div>
-                            <p class="login-card-description">Faça login na sua conta</p>
-                            <form action="#!">
-                                <div class="form-group">
-                                    <!-- <label for="email" class="sr-only">Email</label> -->
-                                    <input type="email" name="email" id="username" class="form-control"
-                                        placeholder="Endereço de email">
-                                </div>
-                                <div class="form-group mb-4">
-                                    <!-- <label for="password" class="sr-only">Password</label> -->
-                                    <input type="password" name="password" id="password" class="form-control"
-                                        placeholder="***********">
-                                </div>
-                                <input name="login" id="login" class="btn btn-block login-btn mb-4" type="button"
-                                    value="Login">
-                            </form>
-                            <a href="#!" class="forgot-password-link">Esqueceu a senha?</a>
-                            <p class="login-card-footer-text">Ainda não tem uma conta? <a href="#!"
-                                    class="text-reset">Registre-se aqui</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- <div class="card login-card">
-            <img src="assets/images/login.jpg" alt="login" class="login-card-img">
-            <div class="card-body">
-              <h2 class="login-card-title">Login</h2>
-              <p class="login-card-description">Sign in to your account to continue.</p>
-              <form action="#!">
-                <div class="form-group">
-                  <label for="email" class="sr-only">Email</label>
-                  <input type="email" name="email" id="email" class="form-control" placeholder="Email">
-                </div>
-                <div class="form-group">
-                  <label for="password" class="sr-only">Password</label>
-                  <input type="password" name="password" id="password" class="form-control" placeholder="Password">
-                </div>
-                <div class="form-prompt-wrapper">
-                  <div class="custom-control custom-checkbox login-card-check-box">
-                    <input type="checkbox" class="custom-control-input" id="customCheck1">
-                    <label class="custom-control-label" for="customCheck1">Remember me</label>
-                  </div>              
-                  <a href="#!" class="text-reset">Forgot password?</a>
-                </div>
-                <input name="login" id="login" class="btn btn-block login-btn mb-4" type="button" value="Login">
-              </form>
-              <p class="login-card-footer-text">Don't have an account? <a href="#!" class="text-reset">Register here</a></p>
-            </div>
-          </div> -->
-        </div>
-    </main>
+    <div class="sidebar"></div> 
+    <div class="container">
+        <div class="header"></div> 
 
-    <script src="assets/js/login.js"></script>
+        <div class="main-content" id="main-content" idConta="1" data-page=""></div>
+    </div>
+
+    <script src="../assets/js/dashboard.js"></script> 
 </body>
-
 </html>
